Fix srollbar
remove scrollbar responsive

--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,15 @@
   color: white; 
   z-index: 3; 
   position: absolute; 
-  top: 80%;
+  top: 81%;
   left: 0; 
   width: 100%; 
-  height: 100%; 
+  height: 10%;
   text-align: center; 
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   text-shadow: 1px 1px 1px #000000ab;
   margin-top: 2px;
+  overflow: hidden;
 }
 
 .divwrap {
@@ -24,6 +25,7 @@
   background-color: rgba(49, 47, 47, 0.4);
   border-radius: 5px;
   border: 1px solid #fff;
+  overflow: hidden;
 }
 .progress {
   width: 100%;
@@ -40,5 +42,5 @@
   background: -webkit-linear-gradient(70deg, #7700ff 40%, #540099 40%);
   z-index: 2; 
   height: 100%; 
-  width: 10%;
+  width: 0%;
 }
